PROD_10-24-19/force-app/main/default/objects/CampaignMember/fields/CIM_Delivered_Via__c.field-meta.xml
<CustomField>
    <fullName>CIM_Delivered_Via__c</fullName>
    <label>CIM Delivered Via</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>VDR</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>