PROD_10-24-19/force-app/main/default/objects/CampaignMember/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <formula>text(Contact.Contact_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>