PROD_10-24-19/force-app/main/default/objects/CampaignMember/fields/ContactCountry__c.field-meta.xml
<CustomField>
    <fullName>ContactCountry__c</fullName>
    <formula>Contact.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Country</label>
    <type>Text</type>
</CustomField>