PROD_10-24-19/force-app/main/default/objects/CampaignMember/fields/Data_Room_Access_Granted__c.field-meta.xml
<CustomField>
    <fullName>Data_Room_Access_Granted__c</fullName>
    <label>Data Room Access Granted</label>
    <type>Date</type>
</CustomField>