PROD_10-24-19/force-app/main/default/objects/CampaignMember/fields/Date_Flyer_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Flyer_Sent__c</fullName>
    <label>Date Flyer Sent</label>
    <type>Date</type>
</CustomField>