PROD_10-24-19/force-app/main/default/objects/CampaignMember/fields/et4ae5__Activity__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Clicked</fullName>
            </value>
            <value>
                <fullName>Soft Bounce</fullName>
            </value>
            <value>
                <fullName>Hard Bounce</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>