PROD_10-24-19/force-app/main/default/objects/CampaignMember/fields/Fund_Meetings_Private_Investor_Day__c.field-meta.xml
<CustomField>
    <fullName>Fund_Meetings_Private_Investor_Day__c</fullName>
    <label>Fund Meetings-Private Investor Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Meetings</fullName>
            </value>
            <value>
                <fullName>AF II</fullName>
            </value>
            <value>
                <fullName>BCP III</fullName>
            </value>
            <value>
                <fullName>BCP III LPAC</fullName>
            </value>
            <value>
                <fullName>BCP IV</fullName>
            </value>
            <value>
                <fullName>BCP IV LPAC</fullName>
            </value>
            <value>
                <fullName>BCP V</fullName>
            </value>
            <value>
                <fullName>BCP V LPAC</fullName>
            </value>
            <value>
                <fullName>BID (EURO)</fullName>
            </value>
            <value>
                <fullName>BID (EURO) LPAC</fullName>
            </value>
            <value>
                <fullName>BID (USD)</fullName>
            </value>
            <value>
                <fullName>BID (USD) LPAC</fullName>
            </value>
            <value>
                <fullName>BIF I</fullName>
            </value>
            <value>
                <fullName>BIF II</fullName>
            </value>
            <value>
                <fullName>BIF III</fullName>
            </value>
            <value>
                <fullName>BIF III LPAC</fullName>
            </value>
            <value>
                <fullName>BIF II LPAC</fullName>
            </value>
            <value>
                <fullName>BIF I LPAC</fullName>
            </value>
            <value>
                <fullName>BIF IV</fullName>
            </value>
            <value>
                <fullName>BPREP</fullName>
            </value>
            <value>
                <fullName>BPREP Au</fullName>
            </value>
            <value>
                <fullName>BPREP AU LPAC</fullName>
            </value>
            <value>
                <fullName>BPREP LPAC</fullName>
            </value>
            <value>
                <fullName>BREF V</fullName>
            </value>
            <value>
                <fullName>BREF V LPAC</fullName>
            </value>
            <value>
                <fullName>BSIP</fullName>
            </value>
            <value>
                <fullName>BSIP LPAC</fullName>
            </value>
            <value>
                <fullName>BSREF</fullName>
            </value>
            <value>
                <fullName>BSREF LPAC</fullName>
            </value>
            <value>
                <fullName>BSREP I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>