PROD_10-24-19/force-app/main/default/objects/CampaignMember/fields/Invited_by_Private_Investor_Day_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Invited_by_Private_Investor_Day_TEXT__c</fullName>
    <description>populate the Invited by</description>
    <formula>Contact.Invited_By_Private_Funds__c</formula>
    <inlineHelpText>populate the Invited by</inlineHelpText>
    <label>Invited by - Private Investor Day TEXT</label>
    <type>Text</type>
</CustomField>