PROD_10-24-19/force-app/main/default/objects/CampaignMember/fields/Secondary_Covering_Professional__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Covering_Professional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Covering Professional</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>