PROD_10-24-19/force-app/main/default/objects/CampaignMember/fields/Total_Documents_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>Total_Documents_Downloaded__c</fullName>
    <label>Total Documents Downloaded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>