PROD_10-24-19/force-app/main/default/objects/CampaignMember/fields/Unsubscribe_Date__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_Date__c</fullName>
    <formula>Contact.Date_of_unsubscribe__c</formula>
    <inlineHelpText>Pulled from the Contact Record</inlineHelpText>
    <label>Unsubscribe Date</label>
    <type>Date</type>
</CustomField>