PROD_10-24-19/force-app/main/default/objects/CampaignMember/recordTypes/BFIN.recordType-meta.xml
<RecordType>
    <fullName>BFIN</fullName>
    <active>true</active>
    <label>BFIN</label>
</RecordType>