PROD_10-24-19/force-app/main/default/objects/CampaignMember/recordTypes/BLP.recordType-meta.xml
<RecordType>
    <fullName>BLP</fullName>
    <active>true</active>
    <label>BLP</label>
</RecordType>