PROD_10-24-19/force-app/main/default/objects/CampaignMember/recordTypes/PFG_Annual_Conference.recordType-meta.xml
<RecordType>
    <fullName>PFG_Annual_Conference</fullName>
    <active>true</active>
    <description>Brookfield Private Funds Annual Investor Conference (BPFAIC)</description>
    <label>PFG Annual Conference</label>
</RecordType>