PROD_10-24-19/force-app/main/default/objects/CampaignMember/recordTypes/PSG.recordType-meta.xml
<RecordType>
    <fullName>PSG</fullName>
    <active>true</active>
    <description>PSG Campaigns</description>
    <label>PSG</label>
</RecordType>