PROD_10-24-19/force-app/main/default/objects/CampaignMember/validationRules/Fund_Meetings_Private_Investor_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>Fund_Meetings_Private_Investor_Day</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

ISCHANGED( Fund_Meetings_Private_Investor_Day__c ),


$Profile.Name  &lt;&gt; &quot;System Administrator&quot;,

$Profile.Name  &lt;&gt; &quot;System Administrator_PFG&quot;

)</errorConditionFormula>
    <errorDisplayField>Fund_Meetings_Private_Investor_Day__c</errorDisplayField>
    <errorMessage>Only Admins can make changes to this field. Please, contact PFG.Events@brookfield.com for assistance</errorMessage>
</ValidationRule>